// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snowpack dsv plugin load function return value matches snapshot with csv input 1`] = `
"export default [ { type:\\"apples\\",
    \\" count\\":\\" 7\\" },
  { type:\\"pears\\",
    \\" count\\":\\" 4\\" },
  { type:\\"bananas\\",
    \\" count\\":\\" 5\\" } ];"
`;

exports[`snowpack dsv plugin load function return value matches snapshot with custom file extension 1`] = `
"export default [ { column1:\\"val1\\",
    column2:\\"val2\\",
    column3:\\"val3\\" },
  { column1:\\"val4\\",
    column2:\\"val5\\",
    column3:\\"val6\\" } ];"
`;

exports[`snowpack dsv plugin load function return value matches snapshot with default dsv input 1`] = `
"export default [ { column1:\\"val1\\",
    column2:\\"val2\\",
    column3:\\"val3\\" },
  { column1:\\"val4\\",
    column2:\\"val5\\",
    column3:\\"val6\\" } ];"
`;

exports[`snowpack dsv plugin load function return value matches snapshot with psv input 1`] = `
"export default [ { column1:\\"val1\\",
    column2:\\"val2\\",
    column3:\\"val3\\" },
  { column1:\\"val4\\",
    column2:\\"val5\\",
    column3:\\"val6\\" } ];"
`;

exports[`snowpack dsv plugin load function return value matches snapshot with tsv input 1`] = `
"export default [ { powerful:\\"stand\\",
    drink:\\"orange\\",
    would:\\"slightly\\",
    say:\\"none\\",
    parallel:\\"tongue\\",
    note:\\"sudden\\" },
  { powerful:\\"solve\\",
    drink:\\"aid\\",
    would:\\"ourselves\\",
    say:\\"dear\\",
    parallel:\\"from\\",
    note:\\"corn\\" },
  { powerful:\\"beneath\\",
    drink:\\"hardly\\",
    would:\\"count\\",
    say:\\"yesterday\\",
    parallel:\\"broad\\",
    note:\\"hair\\" },
  { powerful:\\"should\\",
    drink:\\"sing\\",
    would:\\"rocket\\",
    say:\\"mice\\",
    parallel:\\"scale\\",
    note:\\"page\\" },
  { powerful:\\"disappear\\",
    drink:\\"additional\\",
    would:\\"cell\\",
    say:\\"steam\\",
    parallel:\\"map\\",
    note:\\"second\\" } ];"
`;

exports[`snowpack dsv plugin uses processRows to alter output 1`] = `
"export default [ { type:\\"apples\\",
    \\" count\\":7 },
  { type:\\"pears\\",
    \\" count\\":4 },
  { type:\\"bananas\\",
    \\" count\\":5 } ];"
`;
